# pycmxml

./: .gitignore  README.md  pyproject.toml
pycmxml/: pycmxml.py
pycmxml/config/: config.py  config_template.py
pycmxml/connection/: db.py
pycmxml/datasave/: process.py  save.py
pycmxml/samples/: obterGrupoAtuadores.xml
pycmxml/templates/michelin/: obterPacotePosicoes.xml  obterVeiculos.xml
src/pycmxml/: pycmxml.py
src/pycmxml/connection/: db.py
src/pycmxml/datasave/: save.py
src/pycmxml/utils/: utils.py
test/samples/: obterVeiculosResponse.xml
