
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycmxml"
version = "0.0.1"
description = "cat for cfdi_xml files and store in db"
readme = "README.md"
requires-python = ">=3.5"
keywords = ["cat", "xml","cfdi","sat","hacienda","mx","cartaporte","cfdi40","cfdi 4.0"]
license = {text = "MIT"}
classifiers = [
    "Framework :: -",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyodbc","rich","pycfdi_transform",
]
[project.scripts]
cli-name = "pycmxml.pycmxml:main"
#dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
#
#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/


